--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
 .login-card {
     display: flex;
     border: 4px rgb(186, 226, 233) solid;
@@ -5,25 +9,55 @@
     padding: 20px;
     justify-content: center;
     width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 
 }
 
 .splash-img {
     width: 45%;
+    object-fit: cover;
     border: 2px solid black;
+    margin: 20px;
+    
 }
 
 .login-input {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .login-right {
     margin: 20px;
     border: 1px rgb(121, 223, 223) dotted;
-    padding: 20px;
+    
     width: 45%;
+    height: 80%;
+
+}
+
+h1 {
+    text-align: center;
+}
+
+
+input {
+    margin: 10px;
+    padding: 10px;
+    width: 70% ;
+    height: 50px;
+    border-radius: 5px;
+    border: 2px solid blue;
+    background-color: azure;
+}
+
+button {
+    margin: 10px;
+    padding: 10px;
+    width: 70%;
+    height: 50px;
+    border-radius: 5px;
+    border: 2px solid blue;
+    background-color: darkcyan;
 
 }
