--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     margin: 20px;    
 }
 
-.login-input {
+.login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
